// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with address and name but no number 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "hsl(0, 53%, 93%)",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "hsl(0, 67%, 24%)",
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "letterSpacing": 0.12,
          "lineHeight": 16,
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "fontFamily": "Inter-Regular",
        "fontSize": 12,
        "letterSpacing": 0.12,
        "lineHeight": 16,
        "marginHorizontal": 20,
        "paddingTop": 6,
        "textAlign": "center",
      }
    }
  >
    0x0000...7E57
  </Text>
</View>
`;

exports[`Avatar renders correctly with address but no name nor number 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "hsl(0, 53%, 93%)",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
          undefined,
        ]
      }
    >
      <svg
        fill="none"
        height="40"
        viewBox="0 0 40 40"
        width="40"
      >
        <circle
          cx="20"
          cy="20"
          fill="hsl(0, 53%, 93%)"
          r="20"
        />
        <path
          d="M20 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 7c2.67 0 8 1.33 8 4v3H12v-3c0-2.67 5.33-4 8-4Zm0 1.9c-2.97 0-6.1 1.46-6.1 2.1v1.1h12.2V25c0-.64-3.13-2.1-6.1-2.1Z"
          fill="hsl(0, 67%, 24%)"
        />
      </svg>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "letterSpacing": 0.12,
          "lineHeight": 16,
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    feedItemAddress, {"address":"0x0000...7E57"}
  </Text>
</View>
`;

exports[`Avatar renders correctly with just number 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "hsl(0, 53%, 93%)",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
          undefined,
        ]
      }
    >
      <svg
        fill="none"
        height="40"
        viewBox="0 0 40 40"
        width="40"
      >
        <circle
          cx="20"
          cy="20"
          fill="hsl(0, 53%, 93%)"
          r="20"
        />
        <path
          d="M20 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 7c2.67 0 8 1.33 8 4v3H12v-3c0-2.67 5.33-4 8-4Zm0 1.9c-2.97 0-6.1 1.46-6.1 2.1v1.1h12.2V25c0-.64-3.13-2.1-6.1-2.1Z"
          fill="hsl(0, 67%, 24%)"
        />
      </svg>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "letterSpacing": 0.12,
          "lineHeight": 16,
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    +14155556666
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        {
          "alignItems": "center",
          "fontFamily": "Inter-Regular",
          "fontSize": 14,
          "justifyContent": "center",
          "lineHeight": 20,
          "marginRight": 4,
        }
      }
    >
      🇺🇸
    </Text>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      +1 415-555-6666
    </Text>
  </View>
</View>
`;

exports[`Avatar renders correctly with number and name 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "hsl(0, 53%, 93%)",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "hsl(0, 67%, 24%)",
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "letterSpacing": 0.12,
          "lineHeight": 16,
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        {
          "alignItems": "center",
          "fontFamily": "Inter-Regular",
          "fontSize": 14,
          "justifyContent": "center",
          "lineHeight": 20,
          "marginRight": 4,
        }
      }
    >
      🇺🇸
    </Text>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      +1 415-555-6666
    </Text>
  </View>
</View>
`;
